
o Pike.FakeObject

  This is used as a placeholder used in place of other objects in backtraces.

o Image.Dims.exif_get and Image.exif_decode

  New convenience functions to get the functionality of
  Image.Dims.exif_get_JPEG and Image.JPEG._decode (rotation of the image
  according to the EXIF orientation information) without needing to check
  if the image is JPEG first.

Bug fixes
---------

o backtrace()

  Hide mutex keys and crypto contexts from backtraces.

  Having unexpected references to mutex keys may cause hangs and
  complaints about attempting to lock mutexes recursively.

o combine_path()

  Fixed corner case where combine_path() on strings starting with
  "./../" used to gain one directory level. Eg:

    Old behavior:
    > combine_path(".", "../foo");
    (1) Result: "../foo"
    > combine_path("./..", "foo");
    (2) Result: "foo"
    > combine_path("./../foo");
    (3) Result: "foo"
    
    New (fixed) behavior:
    > combine_path(".", "../foo");
    (1) Result: "../foo"
    > combine_path("./..", "foo");
    (2) Result: "../foo"
    > combine_path("./../foo");
    (3) Result: "../foo"

o describe_backtrace()

  - Do not use value identifiers that have not been defined in
    the visible backtrace.

  - Fix clipped/canclip propagation.

o types()

  Fixed reference leak.

o Calendar

  - Fixed typo in the Catalan word for the month December.

  - Updated tzdata to 2018g.

o Compiler

  - Adhere to the calling convention more in the machine code
    generator on amd64, namely by keeping the stack pointer aligned
    before calling into C code. GCC 8 started to emit instructions
    relying on the correct, alignment, causing General Protection
    Faults.

  - Fixed some corner cases where file names where missing from
    backtraces.

o Filesystem.Tar

  Fix extraction of S_ISUID and S_ISGID bits.

  POSIX mandates that after a chown() (by unprivileged users), the
  S_ISUID and S_ISGID bits are cleared, Linux 2.2.13 removed the